--- a/src/index.qmd
+++ b/src/index.qmd
@@ -3,7 +3,7 @@ title: "DSAN 5100 Group 5 Final Project"
 format: html
 ---
 
-# Import Libraries
+# Libraries Used
 ```{r, message=FALSE}
 library(tidyverse)
 library(lubridate)
@@ -14,6 +14,8 @@ library(zoo)
 library(factoextra)
 ```
 
+# Constants
+
 ```{r}
 cities <- c(
   "New York", "Los Angeles", "Chicago", "Houston", "Phoenix",
@@ -21,12 +23,3 @@ cities <- c(
 )
 set.seed(5100)
 ```
-
-# Load and Clean Data
-{{< include data.qmd >}}
-
-# Time Series EDA
-{{< include time_series.qmd >}}
-
-# Hypothesis Testing
-<!-- {{< include hypothesis_testing.qmd >}}             -->
